# AI_Extraction

./: Readme.md  db  di_results.json  digpt.ipynb  extraction_results.json  gptvision2.ipynb  poc_extraction.db  pyproject.toml  res4.jsonl
analyse_resl/: file.json  res2.jsonl  results.jsonl
backend/: __init__.py  database.py  extractor.py  main.py  models.py
extra/: Azure Document Intelligence Pricing Comparison.xlsx  Observations  poc_comparison.ipynb
frontend/: app.py
ipynbs/: gptvision.ipynb
slides/: WT_AI_Extraction_POC.pptx
slides/dp/: WT_AI_Extraction_POC_Comparison.xlsx  WT_AI_Extraction_POC_v2.pptx  ~$WT_AI_Extraction_POC.pptx
